# april

./: .gitignore  CMakeLists.txt  CMakeSettings.json  EXCEPTION  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
animation/: animate.py  requirements.txt
benchmark/: CMakeLists.txt  CMakelists.txt  argon_block.cpp  baseline_DS_AOS.cpp  baseline_DS_AOS_optim.cpp  baseline_DS_SIMD.cpp  baseline_DS_SOA.cpp  cube_benchmark_DS.cpp  cube_benchmark_LL.cpp  executor_benchmark.cpp  force_kernel_benchmark.cpp  interaction_benchmark.cpp
benchmark/input/: hoomd_bench_LL.py  in.lmp_benchmark_LL  in.lmp_benchmark_LL_prod
benchmark/input/hoomd/: hoomd_bench_LL.py
benchmark/input/lammps/: in.lmp_benchmark_LL  intel_install.sh  interaction_benchmark.script  kokkos_install.sh
benchmark/results/: bench.csv  data_raw.txt  info.txt  plot.py
examples/: CMakeLists.txt  CMakelists.txt  example1.cpp  example2.cpp  falling_water_drop.cpp  galaxy.cpp  halleys_comet.cpp  sandbox.cpp  two_body_collision.cpp
examples/common/: utils.cpp  utils.h
include/april/: april.h  april.hpp  common.h  common.hpp  defaults.h  macros.hpp
include/april/algo/: algorithm.h  container.h  direct_sum.h  linked_cells.h
include/april/base/: bitmask.hpp  concepts.hpp  config.hpp  macros.hpp  policy.hpp  traits.hpp  types.hpp
include/april/boundaries/: absorb.h  absorb.hpp  boundary.h  boundary.hpp  boundary_table.h  boundary_table.hpp  open.h  open.hpp  outflow.h  periodic.h  periodic.hpp  reflective.h  reflective.hpp  repulsive.h  repulsive.hpp
include/april/containers/: aos.hpp  aos_container.hpp  aosoa.hpp  batch.h  batch.hpp  batching.hpp  cell_orderings.hpp  container.h  container.hpp  container_base.h  container_traits.hpp  contiguous_container.h  contiguous_container.hpp  direct_sum.h  direct_sum.hpp  kernel_traits.hpp  layout.hpp  linked_cells.h  linked_cells.hpp  linked_cells2.h  linked_cells_aosoa.hpp  linked_cells_types.h  linked_cells_types.hpp  soa.hpp  soa_container.h
include/april/controllers/: controller.h  controller.hpp  thermostat.h  thermostat.hpp
include/april/core/: build.h  build.hpp  context.h  context.hpp  domain.hpp  environment.hpp  integrator.h  integrator_base.h  stoermer_verlet.h  system.h  system.hpp  yoshida4.h
include/april/domain/: boundary.h  boundary_conditions.h  domain.h
include/april/env/: boundary.h  common.h  data.h  data.hpp  domain.h  domain.hpp  environment.h  environment.hpp  force.h  interaction.h  pack_utils.h  particle.h  traits.h  traits.hpp
include/april/exec/: concurrency.hpp  config.hpp  executor.hpp  hardware.hpp  info.hpp  kernel.hpp  native_executer.hpp  omp_executor.hpp  parallel_utils.hpp  particle_kernel.hpp  policy.hpp  sequential_executor.hpp
include/april/fields/: field.h  field.hpp  local_field.h  local_field.hpp  uniform_field.h  uniform_field.hpp
include/april/forces/: coulomb.h  coulomb.hpp  force.h  force.hpp  force_table.h  force_table.hpp  gravity.h  gravity.hpp  harmonic.h  harmonic.hpp  interaction.h  inverse_square.h  lennard_jones.h  lennard_jones.hpp  lennardjones.h  lennardjones.hpp  no_force.h  no_force.hpp  noforce.h  noforce.hpp  power_law.h
include/april/integrators/: integrator.h  integrator.hpp  stoermer_verlet.h  velocity_verlet.h  velocity_verlet.hpp  yoshida4.h  yoshida4.hpp
include/april/interactions/: coulomb.hpp  force.hpp  gravity.hpp  harmonic.hpp  interaction_table.hpp  lennard_jones.hpp  no_force.hpp
include/april/io/: monitor.h  output.h  performance.h  status.h
include/april/math/: range.hpp  sfc.hpp  statistics.hpp  vec3.hpp
include/april/monitors/: benchmark.h  benchmark.hpp  binary_output.h  binary_output.hpp  monitor.h  monitor.hpp  output.h  performance.h  progressbar.h  progressbar.hpp  status.h  terminal_output.h  terminal_output.hpp  xyz_output.hpp
include/april/particle/: access.h  access.hpp  attributes.hpp  defs.h  defs.hpp  descriptors.h  fields.h  fields.hpp  generators.h  generators.hpp  packed_access.hpp  particle.h  particle.hpp  particle_defs.h  particle_descriptors.h  particle_fields.h  particle_types.hpp  properties.hpp  record.hpp  scalar_access.hpp  source.hpp
include/april/shared/: distributions.h  distributions.hpp  pack_storage.h  trigger.h  trigger.hpp  vec3.hpp
include/april/simd/: backend_std_simd.hpp  backend_xsimd.hpp  concepts.hpp  packed.hpp  (+5 more)
scripts/: copy_to_native_wsl.sh  install_tools_wsl.sh  run_benchmark.sh  run_coverage.sh  run_coverage_clang.sh  run_coverage_gcc.sh
src/: CMakeLists.txt  april.cpp
src/algo/: direct_sum.cpp  linked_cells.cpp
src/containers/: direct_sum.cpp  linked_cells.cpp
src/core/: build.cpp  data.cpp  system.cpp
src/env/: environment.cpp  interaction.cpp  particle.cpp
test/: CMakeLists.txt  apply_boundary_test.cpp  boundary_condition_test.cpp  common.h  directsum_test.cpp  environment_test.cpp  interaction_test.cpp  linkedcells_test.cpp  map_test.cpp  output_test.cpp  set_test.cpp  stoermerverlet_test.cpp  system_test.cpp  test_april.cpp  yoshida_test.cpp
test/boundaries/: absorb_test.cpp  apply_boundary_test.cpp  periodic_test.cpp  reflective_test.cpp  repulsive_test.cpp
test/common/: ConstantForce.h  OrbitMonitor.h  constant_force.h  orbit_monitor.h  utils.h
test/containers/: cell_ordering_test.cpp  directsum_test.cpp  linkedcells_test.cpp  scheduling_test.cpp
test/controllers/: apply_controller_test.cpp  thermostat_test.cpp
test/core/: conservation_test.cpp  regression_test.cpp  system_test.cpp
test/exec/: executors_test.cpp
test/fields/: apply_field_test.cpp  local_field_test.cpp  uniform_field_test.cpp
test/forces/: forces_test.cpp  interaction_test.cpp  simd_forces_test.cpp
test/integrators/: conservation_test.cpp  stoermerverlet_test.cpp  yoshida_test.cpp
test/math/: range_test.cpp  simd_ref_test.cpp  simd_test.cpp  simd_vec3_ref_tests.cpp  vec3_ref_test.cpp  vec3_test.cpp
test/monitors/: output_test.cpp  xyz_test.cpp
test/particle/: packed_fields_test.cpp  particle_fields_test.cpp  particle_generators_test.cpp  particle_test.cpp
test/utility/: graph_test.cpp  xml_test.cpp
(+85 files in other folders)
